--- a/Project_KeepFit/src/main/webapp/WEB-INF/web.xml
+++ b/Project_KeepFit/src/main/webapp/WEB-INF/web.xml
@@ -7,40 +7,40 @@
 	<!-- Processes application requests -->
 	<servlet>
 		<servlet-name>appServlet</servlet-name>
-		<servlet-class>org.springframework.web.servlet.DispatcherServlet</servlet-class>
+		<servlet-class>org.springframework.web.servlet.DispatcherServlet
+		</servlet-class>
 		<init-param>
 			<param-name>contextConfigLocation</param-name>
 			<param-value>
-			/WEB-INF/spring/appServlet/servlet-context.xml
-			/WEB-INF/spring/appServlet/root-context.xml
+				/WEB-INF/spring/appServlet/servlet-context.xml
+				/WEB-INF/spring/appServlet/root-context.xml
 			</param-value>
 		</init-param>
 		<load-on-startup>1</load-on-startup>
 	</servlet>
-		
+
 	<servlet-mapping>
 		<servlet-name>appServlet</servlet-name>
 		<url-pattern>/</url-pattern>
 	</servlet-mapping>
-	
-	
-	<!-- 한글인코딩  -->
-   
--<filter>
-<filter-name>charEncoding</filter-name>
-<filter-class>org.springframework.web.filter.CharacterEncodingFilter</filter-class>
 
 
--<init-param>
-<param-name>encoding</param-name>
-<param-value>UTF-8</param-value>
-</init-param>
-</filter>
+	<!-- 한글인코딩 -->
+	<filter>
+		<filter-name>charEncoding</filter-name>
+		<filter-class>org.springframework.web.filter.CharacterEncodingFilter
+		</filter-class>
+
+		<init-param>
+			<param-name>encoding</param-name>
+			<param-value>UTF-8</param-value>
+		</init-param>
+	</filter>
 
 
--<filter-mapping>
-<filter-name>charEncoding</filter-name>
-<url-pattern>/*</url-pattern>
-</filter-mapping>
+	<filter-mapping>
+		<filter-name>charEncoding</filter-name>
+		<url-pattern>/*</url-pattern>
+	</filter-mapping>
 
 </web-app>
